--- a/home.html
+++ b/home.html
@@ -202,28 +202,175 @@ body{
   font-weight: 500;
   color: #0f172a;
 }
+/* ---- CALL DIALOG ---- */
 .call-dialog {
   position: fixed;
   bottom: 20px; right: 20px;
-  width: 280px; height: 400px;
-  background: #fff; border-radius: 15px;
-  box-shadow: 0 10px 30px rgba(0,0,0,0.15);
+  width: 350px; height: 500px; /* bigger size */
+  background: linear-gradient(145deg, #f9f9f9, #e0e0e0);
+  border-radius: 20px;
+  box-shadow: 0 15px 40px rgba(0,0,0,0.25);
   display: flex; flex-direction: column; overflow: hidden;
-  animation: fadeIn 0.3s ease; z-index:9999;
+  animation: fadeIn 0.4s ease;
+  z-index: 9999;
+  font-family: 'Segoe UI', sans-serif;
 }
-.call-header { display:flex; justify-content:space-between; align-items:center; padding:10px; }
-.call-body { flex:1; position:relative; }
-.call-body video { width:100%; height:100%; border-radius:15px; object-fit:cover; background:#000; }
-#localVideo { width:80px; height:120px; position:absolute; top:10px; right:10px; border-radius:10px; border:2px solid #fff; }
-.call-actions { display:flex; justify-content:space-around; padding:10px; background:#f1f1f1; }
-.icon-btn { background:#fff; border-radius:50%; width:44px; height:44px; display:flex; justify-content:center; align-items:center; font-size:18px; cursor:pointer; }
-.end-call { background:#ef4444; color:#fff; }
 
-.incoming-actions { position:absolute; bottom:30px; width:100%; display:flex; justify-content:space-around; }
-.accept-btn, .decline-btn { padding:10px 20px; border-radius:25px; font-weight:600; border:none; cursor:pointer; color:#fff; }
-.accept-btn { background:#10b981; }
-.decline-btn { background:#ef4444; }
-@keyframes fadeIn { from {opacity:0; transform:translateY(20px)} to {opacity:1; transform:translateY(0)} }
+/* ---- HEADER ---- */
+.call-header {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  padding: 15px 20px;
+  background: #fff;
+  box-shadow: 0 3px 6px rgba(0,0,0,0.1);
+  border-bottom-left-radius: 20px;
+  border-bottom-right-radius: 20px;
+}
+
+.call-header .profile {
+  display: flex;
+  align-items: center;
+  gap: 12px;
+}
+
+.call-header .profile img {
+  width: 55px;
+  height: 55px;
+  border-radius: 50%;
+  border: 2px solid #10b981;
+  object-fit: cover;
+}
+
+.call-header .profile .name-status {
+  display: flex;
+  flex-direction: column;
+  line-height: 1.2;
+}
+
+.call-header .profile .name-status .name {
+  font-weight: 700;
+  font-size: 16px;
+  color: #111827;
+}
+
+.call-header .profile .name-status .status {
+  font-size: 12px;
+  color: #6b7280;
+}
+
+/* ---- BODY ---- */
+.call-body {
+  flex: 1;
+  position: relative;
+  background: #000;
+  border-radius: 15px;
+  overflow: hidden;
+}
+
+.call-body video {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+  border-radius: 15px;
+  background: #000;
+}
+
+#localVideo {
+  width: 100px;
+  height: 140px;
+  position: absolute;
+  top: 15px;
+  right: 15px;
+  border-radius: 12px;
+  border: 3px solid #fff;
+  box-shadow: 0 4px 15px rgba(0,0,0,0.25);
+  object-fit: cover;
+}
+
+/* ---- CALL ACTIONS ---- */
+.call-actions {
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
+  padding: 15px 0;
+  background: #f9fafb;
+  border-top-left-radius: 15px;
+  border-top-right-radius: 15px;
+  gap: 20px;
+}
+
+.icon-btn {
+  background: #fff;
+  border-radius: 50%;
+  width: 50px;
+  height: 50px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  font-size: 20px;
+  cursor: pointer;
+  transition: all 0.2s ease;
+  box-shadow: 0 4px 12px rgba(0,0,0,0.15);
+}
+
+.icon-btn:hover {
+  transform: scale(1.1);
+  box-shadow: 0 6px 18px rgba(0,0,0,0.25);
+}
+
+.end-call {
+  background: #ef4444;
+  color: #fff;
+}
+
+/* ---- INCOMING ACTIONS ---- */
+.incoming-actions {
+  position: absolute;
+  bottom: 30px;
+  width: 100%;
+  display: flex;
+  justify-content: space-around;
+  gap: 20px;
+}
+
+.accept-btn, .decline-btn {
+  padding: 12px 28px;
+  border-radius: 30px;
+  font-weight: 600;
+  border: none;
+  cursor: pointer;
+  font-size: 15px;
+  transition: all 0.2s ease;
+}
+
+.accept-btn {
+  background: #10b981;
+  color: #fff;
+  box-shadow: 0 4px 12px rgba(16,185,129,0.3);
+}
+
+.accept-btn:hover {
+  transform: scale(1.05);
+  box-shadow: 0 6px 18px rgba(16,185,129,0.45);
+}
+
+.decline-btn {
+  background: #ef4444;
+  color: #fff;
+  box-shadow: 0 4px 12px rgba(239,68,68,0.3);
+}
+
+.decline-btn:hover {
+  transform: scale(1.05);
+  box-shadow: 0 6px 18px rgba(239,68,68,0.45);
+}
+
+/* ---- ANIMATION ---- */
+@keyframes fadeIn {
+  from { opacity:0; transform: translateY(25px);}
+  to { opacity:1; transform: translateY(0);}
+}
 
 </style>
 
@@ -917,6 +1064,7 @@ startRealtime()
 </script> 
 </body>
 </html>
+
 
 
 
